--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,10 @@
 .mainHeader {
     position: relative;
     z-index: 3;
-    padding: 0 45px;
-    background-color: #fafafa;;
     color: #828282;
     font-size: 13px;
     line-height: 1.2;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 .mainHeader ul {
@@ -24,7 +23,6 @@
     vertical-align: top;
     height: 40px;
     margin: 0 auto;
-    padding-left: 0;
 }
 
 .mainHeader ul li {
@@ -45,12 +43,22 @@
     color: #333333;
     transition: color ease-in-out .2s;
 }
+.navHeader {
+    border-bottom: 1px solid;
+    border-color: rgba(0, 0, 0, 0.12);
+    background-color: #fafafa;
+    padding: 0 45px;
+}
 
 .lowerHeader {
-    display: table;
-    table-layout: fixed;
     width: 100%;
+    margin: 10px auto;
+    padding: 0 45px;
 }
+.lowerHeader>div {
+    display: inline-flex;
+}
+
 .headerLogo {
     padding-right: 20px;
     width: 190px;
@@ -59,4 +67,36 @@
 .headerLogo img {
     max-width: 100%;
     max-height: 100%;
+}
+
+.headerSearch {
+    vertical-align: top;
+    margin-top: 32px;
+}
+.headerSearch>div {
+    position: relative;
+    width: 500px;
+}
+.headerSearch input {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ededed;
+    border-radius: 4px;
+    outline: 0;
+
+}
+.headerSearch .search {
+    position: absolute;
+    right: 0;
+    top: 12px;
+}
+
+.headerInfo {
+    right: 50px;
+    vertical-align: top;
+    position: absolute;
+}
+
+.mainBody {
+    padding: 0 45px;
 }
