--- a/src/App.scss
+++ b/src/App.scss
@@ -59,7 +59,7 @@
 
 .headerLogo {
     padding-right: 20px;
-    width: 190px;
+    width: 235px;
     img {
         max-width: 100%;
         max-height: 100%;
@@ -92,6 +92,10 @@
 
 
 .headerInfo {
+    color: #260852;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: emoji;
     right: 50px;
     vertical-align: top;
     position: absolute;
