--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,7 @@
             a {
                 text-decoration: none;
                 color: #828282;
+                font-size: 14px;
                 &:hover {
                     text-decoration: none;
                     cursor: pointer;
@@ -55,45 +56,7 @@
 .lowerHeader {
     margin: 10px auto;
     padding: 0 45px;
-    >div {
-        /*display: inline-flex;*/
-    }
 }
-
-
-.headerLogo {
-    padding-right: 20px;
-    width: 235px;
-    img {
-        max-width: 100%;
-        max-height: 100%;
-    }
-}
-
-
-
-.headerSearch {
-    vertical-align: top;
-    margin-top: 32px;
-    input {
-        padding: 10px;
-        width: 100%;
-        border: 1px solid #ededed;
-        border-radius: 4px;
-        outline: 0;
-
-    }
-    .search {
-        position: absolute;
-        right: 0;
-        top: 12px;
-    }
-}
-.headerSearch>div {
-    position: relative;
-    width: 500px;
-}
-
 
 .headerInfo {
     color: #260852;
@@ -106,7 +69,6 @@
 }
 
 .mainBody {
-    /*padding: 0 45px;*/
     padding: 0 130px;
 }
 
