--- a/src/pages/WhereToBuy/WhereToBuy.module.css
+++ b/src/pages/WhereToBuy/WhereToBuy.module.css
@@ -2,3 +2,6 @@
     color: #828282;
 }
 
+.map {
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
