--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -1,3 +1,22 @@
 .grey_txt p {
     color: #828282;
 }
+
+
+.wrapper {
+    /*display: grid;
+    grid-template-columns: 25% 25% 25% 25%;*/
+    margin-top: 30px;
+}
+/*.wrapper>div {
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+    margin: 10px;
+    padding: 5px;
+    display: flex;
+}
+.wrapper div {
+    padding: 15px 25px;
+}*/
+ .wrapper img {
+    width: 70px;
+}
