--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -1,9 +1,9 @@
 .grey_txt p {
     color: #828282;
 }
-.pointer {
+/*.pointer {
     cursor: pointer;
-}
+}*/
 .breadcrump {
     color: #828282;
 }
