--- a/src/pages/Repair/Repair.module.css
+++ b/src/pages/Repair/Repair.module.css
@@ -5,3 +5,19 @@
 .tablePrice p {
     text-align: right;
 }
+
+.list {
+    display: grid;
+    grid-template-columns: 30% 50% 20%;
+    padding: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+.list>div:last-child {
+    text-align: right;
+}
+.list>div:first-child {
+    font-weight: 600;
+}
+.list:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+}
