--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -38,7 +38,6 @@
  }
 
 
-
 .items>div>div>div {
     margin-left: 10px;
     margin-bottom: 10px;
@@ -53,8 +52,9 @@
 .filters {
     font-style: italic;
     font-weight: 600;
+    padding: 5px 0;
+    margin-bottom: 5px !important;
 }
 .filters>div {
-    margin: 15px 0px !important;
     width: 80%;
 }
