--- a/src/pages/Delivery/Delivery.module.css
+++ b/src/pages/Delivery/Delivery.module.css
@@ -1,7 +1,8 @@
-/*.pagePadding {
-    padding: 0 130px;
-}*/
 
-.grey_txt p {
-    color: #828282;
+
+.menuHeader {margin: 15px 0;}
+.menuHeader span {
+    font-weight: 600;
+    font-size: 20px;
 }
+
