--- a/src/pages/WhereToBuy/WhereToBuy.module.css
+++ b/src/pages/WhereToBuy/WhereToBuy.module.css
@@ -1,6 +1,9 @@
-.grey_txt p {
-    color: #828282;
+.menuHeader {margin: 15px 0;}
+.menuHeader span {
+    font-weight: 600;
+    font-size: 20px;
 }
+
 
 .map {
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
