--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
     color: #828282;
     font-size: 13px;
     line-height: 1.2;
-    border-bottom: 1px solid #f2f2f2;
+
     ul {
         list-style: none;
         display: inline-flex;
@@ -57,7 +57,8 @@
 
 .lowerHeader {
     margin: 10px auto;
-    padding: 0 45px;
+    padding: 15px 45px;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 .headerInfo {
