--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -1,7 +1,9 @@
-.menuHeader {margin: 15px 0;}
-.menuHeader span {
-    font-weight: 600;
-    font-size: 20px;
+.menuHeader {
+    margin: 15px 0;
+    span {
+        font-weight: 600;
+        font-size: 20px;
+    }
 }
 
 .breadcrump {
@@ -12,51 +14,51 @@
     display: grid;
     grid-template-columns: 20% 80%;
     margin-top: 30px;
+    .items>div>div>div {
+        margin-left: 10px;
+        margin-bottom: 10px;
+        width: 300px;
+
+    }
 }
 
 .wrapper {
     margin: 30px auto;
-}
-.wrapper>div>div {
-    padding: 25px;
-    text-align: center;
-
-}
-.wrapper>div>div:hover {
-    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.04);
-    color: #260852;
-}
-
- .wrapper img {
-    width: 70px;
-}
-
- .wrapper .text, a {
-     font-weight: 600;
-     text-decoration: none;
-     color: #333;
- }
+    >div>div {
+        padding: 25px;
+        text-align: center;
+    }
+    >div>div:hover {
+        box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.04);
+        color: #260852;
+    }
+    img {
+        width: 70px;
+    }
+    .text, a {
+        font-weight: 600;
+        color: #333;
+    }
 
 
-.items>div>div>div {
-    margin-left: 10px;
-    margin-bottom: 10px;
-    width: 300px;
 }
+
 
 .price {
     text-align: right;
     font-weight: 600;
     color: black;
 }
+
+
 .filters {
     font-style: italic;
     font-weight: 600;
     padding: 5px 0;
     margin-bottom: 5px !important;
-}
-.filters>div {
-    width: 80%;
+    >div {
+        width: 80%;
+    }
 }
