--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -14,7 +14,7 @@
     display: grid;
     grid-template-columns: 20% 80%;
     margin-top: 30px;
-    .items>div>div>div {
+    .items a {
         margin-left: 10px;
         margin-bottom: 10px;
         width: 300px;
