--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -1,8 +1,3 @@
-.menuHeader {margin: 15px 0;}
-.menuHeader span {
-    font-weight: 600;
-    font-size: 20px;
-}
 
 
 .work {
@@ -30,4 +25,8 @@
 .holiday {
     color: red;
     font-weight: 600;
+}
+
+.map{
+    margin: 25px auto;
 }
