--- a/src/App.scss
+++ b/src/App.scss
@@ -40,41 +40,50 @@
             }
         }
     }
-}
-
-
-
-.navHeader {
-    border-bottom: 1px solid;
-    border-color: rgba(0, 0, 0, 0.12);
-    background-color: #fafafa;
-    padding: 0 45px;
-    >span img {
-        width: 58px;
-        margin-top: 6px;
+    .navHeader {
+        border-bottom: 1px solid;
+        border-color: rgba(0, 0, 0, 0.12);
+        background-color: #fafafa;
+        padding: 0 45px;
+        >span img {
+            width: 58px;
+            margin-top: 6px;
+        }
+        .headerInfo {
+            color: #260852;
+            font-size: 24px;
+            font-weight: 600;
+            font-family: auto;
+            right: 50px;
+            position: absolute;
+            top: 8px;
+            text-transform: uppercase;
+            font-style: italic;
+        }
     }
 }
 
+
+
+
+
 .lowerHeader {
-    margin: 10px auto;
     padding: 15px 45px;
-    border-bottom: 1px solid #f2f2f2;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    background-color: #f3f3f3;
 }
 
-.headerInfo {
-    color: #260852;
-    font-size: 24px;
-    font-weight: 600;
-    font-family: auto;
-    right: 50px;
-    position: absolute;
-    top: 8px;
-    text-transform: uppercase;
-    font-style: italic;
-}
 
-.mainBody {
-    padding: 0 70px;
+
+.pageTitle {
+    padding: 15px 70px;
+    span {
+        font-weight: 600;
+        font-size: 20px;
+    }
+}
+.pageBody {
+    padding: 0 70px !important;
 }
 
 .botLogo {
@@ -86,6 +95,5 @@
     opacity: 0.5;
 }
 
-a {
-    text-decoration: none;
-}
+a {text-decoration: none;}
+
