--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -1,13 +1,4 @@
-.menuHeader {
-    span {
-        font-weight: 600;
-        font-size: 20px;
-    }
-}
-
-.breadcrump {
-    padding-left: 30px;
-}
+.breadcrump {padding-left: 30px;}
 
 .catalogWrapper {
     display: grid;
@@ -31,11 +22,12 @@
         box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
         cursor: pointer;
         background-color: rgba(0, 0, 0, 0.04);
-        color: #260852;
+        .text:hover {
+            transition: color ease-in-out .3s;
+            color: #270952;
+        }
     }
-    img {
-        width: 70px;
-    }
+    img {width: 70px;}
     .text, a {
         font-weight: 600;
         color: #333;
