--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,8 @@
 }
 
 .mainHeader {
-    position: relative;
+    position: fixed;
+    width: 100%;
     z-index: 3;
     color: #828282;
     font-size: 13px;
@@ -65,6 +66,7 @@
 
 .lowerHeader {
     padding: 15px 45px;
+    margin-top: 45px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     background-color: #f3f3f3;
 }
