--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -6,6 +6,14 @@
     .cardImg {
         text-align: center;
     }
+    .chip {
+        padding-top: 50px;
+    }
+}
+.chipCatalog {
+    position: absolute;
+    top: 10px;
+    right: 5px;
 }
 
 .cardData {
