--- a/src/App.scss
+++ b/src/App.scss
@@ -94,3 +94,9 @@
 
 a {text-decoration: none;}
 
+.noDataOnPage {
+    font-size: 37px;
+    text-align: center;
+    padding-top: 94px;
+    font-weight: 600;
+}
