--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -2,7 +2,7 @@
 
 .catalogWrapper {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 21% 79%;
     margin-top: 30px;
     .items {
         margin-top: 20px;
@@ -46,7 +46,25 @@
 
 
 
-.filterName {
-    width: 80%;
-    text-align: center;
+
+
+.filtersContainer {
+    padding: 10px;
+    background-color: #f3f3f3 !important;
+    .filterName {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+    .filterHeader {
+        font-size: 16px;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    .filterCheckBox {
+        max-height: 350px;
+        display: grid;
+        overflow: auto;
+    }
 }
