add select but need fix filters

--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -54,6 +54,7 @@
     .filterName {
         width: 100%;
         text-align: center;
+        margin-top: 15px;
     }
     .filterHeader {
         font-size: 16px;
