--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -2,7 +2,7 @@
 
 .catalogWrapper {
     display: grid;
-    grid-template-columns: 21% 79%;
+    grid-template-columns: 250px auto;
     margin-top: 30px;
     .items {
         margin-top: 20px;
