--- a/src/App.scss
+++ b/src/App.scss
@@ -81,6 +81,13 @@
 }
 .pageBody {
     padding: 0 70px !important;
+    .noDataWithFilters {
+        text-align: center;
+        font-size: 16px;
+        font-style: italic;
+        color: #1976d2;
+        font-weight: 600;
+    }
 }
 
 .botLogo {
