--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,10 @@
     position: fixed;
     width: 100%;
     z-index: 3;
-    color: #828282;
     font-size: 13px;
     line-height: 1.2;
+    background-color: #fff;
+    box-shadow: 0 1px 10px -6px rgb(0 0 0 / 42%), 0 1px 10px 0 rgb(0 0 0 / 12%), 0 4px 5px -2px rgb(0 0 0 / 10%);
 
     ul {
         list-style: none;
@@ -26,12 +27,12 @@
             white-space: nowrap;
             margin-left: 15px;
             margin-right: 15px;
-            font-weight: 500;
             a {
                 text-decoration: none;
-                color: #828282;
-                font-size: 14px;
+                color: #000;
+                font-size: 12px;
                 font-weight: 600;
+                text-transform: uppercase;
                 &:hover, &.active {
                     text-decoration: none;
                     cursor: pointer;
@@ -42,9 +43,6 @@
         }
     }
     .navHeader {
-        border-bottom: 1px solid;
-        border-color: rgba(0, 0, 0, 0.12);
-        background-color: #fafafa;
         padding: 0 45px;
         >span img {
             width: 58px;
