--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -44,9 +44,7 @@
     color: black;
 }
 
-.wrapper2 {
-    padding: 0 70px;
-}
+
 
 
 
@@ -70,3 +68,18 @@
         overflow: auto;
     }
 }
+
+.wrapper2 {
+    padding: 0 70px;
+    .catalogItems {
+        >div>div {
+            background-repeat: no-repeat;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            width: 200px;
+            height: 200px;
+        }
+    }
+}
+
