--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -72,6 +72,20 @@
 .wrapper2 {
     padding: 0 70px;
     .catalogItems {
+        >div {
+            padding: 10px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            background-color: #ffffffed;
+            margin: 15px;
+            transition: .15s all ease-in-out;
+            &:hover {
+                cursor: pointer;
+                box-shadow: 0 14px 28px
+                rgba(0,0,0,0.25), 0 10px 10px
+                rgba(0,0,0,0.22);
+                transform: scale(1.1);
+            }
+        }
         >div>div {
             background-repeat: no-repeat;
             text-align: center;
@@ -79,6 +93,8 @@
             margin-right: auto;
             width: 200px;
             height: 200px;
+
+
         }
     }
 }
