--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -10,6 +10,10 @@
             margin-left: 10px;
             margin-bottom: 10px;
             width: 300px;
+            transition: transform 0.1s ease-in-out;
+            &:hover {
+                transform: translateY(-0.8rem) scale(1.0125);
+            }
         }
     }
 }
@@ -71,31 +75,45 @@
 
 .wrapper2 {
     padding: 0 70px;
+    margin-top: 50px;
     .catalogItems {
         >div {
             padding: 10px;
             box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
             background-color: #ffffffed;
-            margin: 15px;
+            margin: 20px;
             transition: .15s all ease-in-out;
+            position: relative;
             &:hover {
                 cursor: pointer;
                 box-shadow: 0 14px 28px
                 rgba(0,0,0,0.25), 0 10px 10px
                 rgba(0,0,0,0.22);
                 transform: scale(1.1);
+
+            }
+            .item {
+                background-repeat: no-repeat;
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+                width: 200px;
+                height: 200px;
+                .text {
+                    position: absolute;
+                    top: 40%;
+                    width: 200px;
+                    color: white;
+                    font-size: 16px;
+                    text-shadow: 2px 2px black;
+                    background-color: #260852;
+                    border-radius: 15px 0px 15px 0px;
+                }
+
             }
         }
-        >div>div {
-            background-repeat: no-repeat;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
-            width: 200px;
-            height: 200px;
 
 
-        }
     }
 }
 
