--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -14,6 +14,9 @@
             &:hover {
                 transform: translateY(-0.8rem) scale(1.0125);
             }
+            >div {
+                background-color: #ffffffed;
+            }
         }
     }
 }
