--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -1,49 +1,21 @@
 
-.cardInfo {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin-top: 10px;
-    .cardImg {
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        cursor: pointer;
-    }
+.itemPath {
+    color: grey;
+    font-style: italic;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
-
+.itemTitle {
+    font-weight: 500;
+    font-size: 24px;
+    padding-left: 150px;
+    margin-bottom: 15px;
+}
 
 .cardData {
     margin-left: 20px;
-    .directory {
-        color: grey;
-        font-style: italic;
-        margin-bottom: 15px;
-    }
-    .cardDataTitle {
-        font-weight: 500;
-        padding-left: 30px;
-        font-size: 24px;
-        text-align: center;
-        margin-bottom: 15px;
-    }
-    .cardPrice {
-        margin-top: 55px;
-        margin-left: 50px;
-        display: inline-flex;
-        font-weight: 500;
-        font-size: 22px;
-        color: grey;
-        font-style: italic;
-        :nth-child(2) {
-            color: black;
-            padding: 0 5px;
-        }
-    }
 
     .cardParams {
-        margin-left: 30px;
         display: grid;
         grid-template-columns: 3fr 7fr;
         :nth-child(odd) {
