--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -13,7 +13,7 @@
         padding-left: 10px;
     }
 }
-.active {
+.active1 {
     font-weight: 600;
     background-color: rgba(0, 0, 0, 0.08) !important;
 }
