--- a/src/App.scss
+++ b/src/App.scss
@@ -100,3 +100,37 @@
 }
 
 a {text-decoration: none;}
+
+.iconAlign {
+    vertical-align: text-top;
+    padding-right: 5px;
+}
+.paddingTB {
+    padding: 15px 0;
+}
+.blockTitle {
+    text-align: center;
+    font-weight: 600;
+    font-size: 20px;
+}
+.blocks {
+    display: inline-block;
+    text-align: center;
+    margin: 0 auto;
+    >div {
+        margin: 10px;
+        padding-top: 15px;
+        float: left;
+        width: 300px;
+        height: 100px;
+        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+        background-color: #ffffffed;
+        >div:nth-child(2) {
+            font-weight: 600;
+            color: #676767;
+        }
+        >div:nth-child(3) {
+            font-style: italic;
+        }
+    }
+}
