--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;800&display=swap');
 
 .main {
     display: flex;
@@ -50,7 +50,7 @@
             margin-top: 6px;
         }
         .headerInfo {
-            font-family: 'Rubik Glitch', cursive;
+            font-family: 'Alegreya', serif;
             letter-spacing: 2px;
             color: #260852;
             font-size: 24px;
