--- a/src/Modal/Modal.scss
+++ b/src/Modal/Modal.scss
@@ -12,11 +12,14 @@
     .modalContent {
         margin: 15% auto;
         width: 60%;
-        background-color: #f3f3f3 !important;
+        background-color: #e8e9ec !important;
         .modalBody {
             padding: 15px;
-            div {
+            .mb {
                 margin-bottom: 10px;
+            }
+            input, div>textarea {
+                background-color: #fff;
             }
         }
     }
@@ -25,8 +28,6 @@
         grid-template-columns: 90% 10%;
         font-weight: 600;
         padding: 5px;
-        background-color: #1976d2;
-        color: white;
         >div {
             margin: 9px auto;
             font-size: 16px;
