card page padding

--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -12,6 +12,12 @@
     margin-bottom: 15px;
 }
 
+.itemImg {
+    text-align: center;
+    background-color: #f3f3f3;
+    padding: 15px;
+}
+
 .cardData {
     margin-left: 20px;
 
