--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -54,6 +54,7 @@
         text-align: center;
         margin-top: 15px;
         margin-bottom: 10px;
+        border-radius: 3px;
     }
     .filterHeader {
         font-size: 16px;
@@ -63,7 +64,7 @@
     }
     .filterCheckBox {
         border-top: 1px solid #b7b7b7;
-        border-bottom: 1px solid #b7b7b7;
+        /*border-bottom: 1px solid #b7b7b7;*/
         max-height: 350px;
         display: grid;
         overflow: auto;
