--- a/src/App.scss
+++ b/src/App.scss
@@ -14,50 +14,67 @@
     z-index: 3;
     background-color: #fff;
     box-shadow: 0 1px 10px -6px rgb(0 0 0 / 42%), 0 1px 10px 0 rgb(0 0 0 / 12%), 0 4px 5px -2px rgb(0 0 0 / 10%);
-
-    ul {
-        list-style: none;
-        display: inline-flex;
-        align-items: center;
-        vertical-align: top;
-        height: 40px;
-        margin: 4px auto;
-        li {
-            white-space: nowrap;
-            margin-left: 15px;
-            margin-right: 15px;
-            a {
-                text-decoration: none;
-                color: #000;
-                font-size: 12px;
-                font-weight: 600;
-                text-transform: uppercase;
-                &:hover, &.active {
-                    text-decoration: none;
-                    cursor: pointer;
-                    color: #260852;
-                    transition: color ease-in-out .2s;
-                }
-            }
-        }
-    }
     .navHeader {
         padding: 0 15px;
-        >span img {
-            width: 58px;
+        display: flex;
+        .navHeader-img{
+            flex: 0 0 58px;
             margin-top: 6px;
+            img{width: 58px;}
         }
-        .headerInfo {
+        .navHeader-menu{
+            flex: 1 1 auto;
+            ul {
+                list-style: none;
+                display: flex;
+                align-items: center;
+                justify-content: end;
+                height: 40px;
+                margin: 4px auto;
+                li {
+                    white-space: nowrap;
+                    margin: 0 15px;
+                    a {
+                        color: #000;
+                        font-size: 12px;
+                        font-weight: 600;
+                        text-transform: uppercase;
+                        &:hover, &.active {
+                            text-decoration: none;
+                            cursor: pointer;
+                            color: #260852;
+                            transition: color ease-in-out .2s;
+                        }
+                    }
+                }
+            }
+            .navHeaderMiniMenu {
+                display: none;
+                padding-top: 5px;
+                justify-content: end;
+                button { color: black}
+            }
+            @media (max-width:1020px ) {
+                ul {display: none}
+                .navHeaderMiniMenu {display: flex}
+            }
+        }
+        .navHeader-title{
+            flex: 1 1 auto;
             font-family: 'Alegreya', serif;
             letter-spacing: 2px;
             color: #260852;
             font-size: 24px;
             font-weight: 600;
-            right: 50px;
-            position: absolute;
-            top: 8px;
             text-transform: uppercase;
             font-style: italic;
+            white-space: nowrap;
+        }
+        @media (max-width:560px ) {
+            .navHeader-title {
+                font-size: 21px;
+                padding-top: 10px;
+            }
         }
     }
 }
