--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -16,6 +16,7 @@
             padding-left: 20px;
             a {
                 margin: 5px;
+                width: 300px;
                 .catalog-cards-column {
                     flex: 0 1 300px;
                     transition: transform 0.1s ease-in-out;
