--- a/src/App.scss
+++ b/src/App.scss
@@ -74,6 +74,7 @@
             text-transform: uppercase;
             font-style: italic;
             white-space: nowrap;
+            padding-left: 10px;
         }
         @media (max-width:560px ) {
             .navHeader-title {
