--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -124,7 +124,7 @@
                     background-position: center;
                     background-color: #ffffffeb;
                     height: 200px;
-                    border-radius: 15px 0 15px 0px;
+                    border-radius: 0 0 15px 0;
                 }
             }
         }
