--- a/src/App.scss
+++ b/src/App.scss
@@ -154,8 +154,8 @@ a {text-decoration: none;}
     >div {
         margin: 10px;
         padding-top: 15px;
-        float: left;
-        width: 300px;
+        min-width: 300px;
+        width: 30%;
         height: 100px;
         box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
         background-color: #ffffffed;
