--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -120,11 +120,10 @@
                 }
                 .catalog-item {
                     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-                    background-repeat: no-repeat;
-                    background-position: center;
                     background-color: #ffffffeb;
                     height: 200px;
                     border-radius: 0 0 15px 0;
+                    text-align: center;
                 }
             }
         }
