up not available, slider, qr

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@
                 list-style: none;
                 display: flex;
                 align-items: center;
-                justify-content: end;
+                justify-content: flex-end;
                 height: 40px;
                 margin: 4px auto;
                 li {
