--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -4,6 +4,12 @@
     font-size: 20px;
     display: flex;
     justify-content: center;
+    font-family: "Alegreya", serif;
+    letter-spacing: 2px;
+    color: #260852;
+    text-transform: uppercase;
+    font-style: italic;
+    white-space: nowrap;
     .blockBody {
         box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
         background-color: rgba(255, 255, 255, 0.9294117647);
