--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -30,3 +30,31 @@
     font-style: italic;
     margin-left: 40px;
 }
+
+.yaMap {
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+.contactBlock {
+    display: flex;
+    flex-wrap: wrap;
+    .subTitle {
+        font-weight: 600;
+        font-size: 20px;
+        font-style: italic;
+        margin-left: 20px;
+        margin-bottom: 15px;
+    }
+    .block1 {
+        flex-basis:30%;
+    }
+    .block2 {
+        flex-grow:1;
+        width: 40%;
+    }
+    @media (max-width: 560px) {.block1{flex-basis:100%;}}
+    .contactInfo {
+        display: inline-flex;
+        justify-content: end;
+        width: 100%;
+    }
+}
