cat page - css fix on img

--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -35,6 +35,7 @@
         img {
             cursor: pointer;
             height: 300px;
+            max-width: 600px;
         }
         @media (max-width: 570px) {
             img {height: 200px}
