--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -1,3 +1,5 @@
+$blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+
 .titleBlock {
     text-align: center;
     font-weight: 600;
@@ -12,10 +14,29 @@
     white-space: nowrap;
     margin-bottom: 10px;
     .blockBody {
-        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+        box-shadow: $blockShadow;
         background-color: rgba(255, 255, 255, 0.9294117647);
         width: 90%;
         margin: -10px 0 10px 0;
         padding: 10px;
     }
+}
+
+.blockInfo {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 10px;
+    min-width: 300px;
+    height: 90px;
+    box-shadow: $blockShadow;
+    background-color: #ffffffed;
+    > div:nth-child(2) {
+        font-weight: 600;
+        color: #676767;
+    }
+    > div:nth-child(3) {
+        font-style: italic;
+    }
+
 }
