--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -26,9 +26,7 @@
 .map{margin: 0 auto;}
 
 
-.notice {
-    font-style: italic;
-}
+
 
 .yaMap {
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
@@ -51,8 +49,16 @@
     font-style: italic;
     margin-left: 20px;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .scheduleBlock {
-    max-width: 800px;
+    width: 700px;
+    margin: 0 auto;
 }
+@media (max-width: 560px) {.scheduleBlock{min-width: 360px}}
+.notice {
+    font-style: italic;
+    text-align: center;
+}
+
