--- a/src/App.scss
+++ b/src/App.scss
@@ -178,5 +178,6 @@ a {text-decoration: none;}
     flex-wrap: wrap;
     text-align: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
