--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -1,4 +1,3 @@
-
 .itemPath {
     color: grey;
     font-style: italic;
@@ -18,6 +17,7 @@
 .itemImgBlock {
     display:flex;
     flex-wrap: wrap;
+    position: relative;
     .imgList {
         img {
             width: 60px;
@@ -65,4 +65,13 @@
 
 .fancybox__backdrop {
     opacity: 0.8 !important;
+}
+
+.noAvailableCatPage {
+    color: #b3b3b7;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: right;
+    position: absolute;
+    right: 0;
 }
