--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -101,23 +101,24 @@
         min-width: 350px;
         .catalog-container {
             transition: .15s all ease-in-out;
+            box-shadow: 0 2px 4px 0 rgb(136 144 195 / 20%), 0 5px 15px 0 rgb(37 44 97 / 15%);
+            border-radius: 15px;
             &:hover {
                 background-color: #ffffffeb;
                 transform: scale(1.1);
             }
             .catalog-text {
                 text-align: center;
-                color: #ffffff;
-                font-size: 16px;
-                text-shadow: 2px 2px black;
-                background-color: #260852;
-                border-radius: 15px 0px 0px 0px;
                 line-height: 2;
+                font-weight: 600;
+                font-size: 20px;
+                font-family: "Alegreya", serif;
+                letter-spacing: 2px;
+                color: #260852;
+                white-space: nowrap;
             }
             .catalog-item {
-                box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
                 height: 200px;
-                border-radius: 0 0 15px 0;
                 text-align: center;
             }
         }
