--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -40,3 +40,38 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
     }
 
 }
+
+.catalogCard {
+    margin: 5px;
+    width: 300px;
+    .catalog-cards-column {
+        flex: 0 1 300px;
+        transition: transform 0.1s ease-in-out;
+        background-color: #ffffffed;
+        &:hover {
+            transform: translateY(-0.8rem) scale(1.0125);
+            background-color: #fff;
+        }
+        .notAvailable {
+            background: grey;
+            padding: 3px;
+            text-align: right;
+            color: #fff;
+            position: absolute;
+            right: 0;
+            top: 76px;
+            border-radius: 4px 0 0 4px;
+        }
+        .cardTitle {
+            font-size: 16px;
+            padding: 10px 10px 0px 10px;
+            font-weight: 600;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            height: 50px;
+        }
+        .cardSubTitle {
+            color: black;
+        }
+    }
+}
