--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -15,7 +15,7 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
     margin-bottom: 10px;
     .blockBody {
         box-shadow: $blockShadow;
-        background-color: rgba(255, 255, 255, 0.9294117647);
+        background-color: #ffffff;
         width: 90%;
         margin: -10px 0 10px 0;
         padding: 10px;
@@ -42,12 +42,13 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
 }
 
 .catalogCard {
-    margin: 5px;
+    margin: 6px;
     width: 300px;
     .catalog-cards-column {
         flex: 0 1 300px;
         transition: transform 0.1s ease-in-out;
-        background-color: #ffffffed;
+        box-shadow: 0 2px 4px 0 rgb(136 144 195 / 20%), 0 5px 15px 0 rgb(37 44 97 / 15%);
+        border-radius: 15px;
         &:hover {
             transform: translateY(-0.8rem) scale(1.0125);
             background-color: #fff;
