--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -62,6 +62,7 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
             right: 0;
             top: 76px;
             border-radius: 4px 0 0 4px;
+            z-index: 10;
         }
         .cardTitle {
             font-size: 16px;
@@ -74,5 +75,24 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
         .cardSubTitle {
             color: black;
         }
+    }
+}
+
+.checkbox {
+    margin: 5px 0px;
+    cursor: pointer;
+    position: relative;
+    input {
+        width: 27px;
+        height: 17px;
+        position: absolute;
+        cursor: pointer;
+    }
+    label {
+        margin: 0;
+        font-size: 1rem;
+        line-height: 1.5;
+        padding-left: 40px;
+        cursor: pointer;
     }
 }
