catalog item main - to center

--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -94,8 +94,11 @@
                 left: 15px;
             }
             .catalog-item {
-                height: 200px;
-                text-align: center;
+                height: 250px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: auto;
             }
         }
     }
