filters block - flex for checkbox

--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -58,6 +58,13 @@
         overflow-y: auto;
         overflow-x: hidden;
     }
+    .flexBlock {
+        display: flex;
+        flex-wrap: wrap;
+        .checkbox {
+            width: 50%;
+        }
+    }
 }
 
 
