--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -96,3 +96,16 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
         cursor: pointer;
     }
 }
+
+.navBreadcrumb {
+    padding-left: 35px;
+    .brIcon {
+        vertical-align: middle;
+    }
+    .brTitle {
+        color: #000;
+        font-size: 14px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+}
