--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -81,6 +81,7 @@
             box-shadow: 0 2px 4px 0 rgb(136 144 195 / 20%), 0 5px 15px 0 rgb(37 44 97 / 15%);
             border-radius: 15px;
             position: relative;
+            max-width: 500px;
             &:hover {
                 background-color: #ffffffeb;
                 transform: scale(1.1);
@@ -111,10 +112,6 @@
     }
 }
 
-
-.backBTN {
-    margin: 0 20px;
-}
 
 .upBtn {
     position: fixed;
