--- a/src/App.scss
+++ b/src/App.scss
@@ -56,9 +56,7 @@
                 .navHeaderMiniMenu {display: flex}
             }
             .navHeaderMiniMenu2{
-                a{
-                    color: black;
-                }
+                a{color: black;                }
             }
         }
         .navHeader-title{
@@ -90,17 +88,9 @@
 }
 @media (max-width: 1020px) {.lowerHeader>div, .lowerHeader>div>div {width: 770px !important;}}
 @media (max-width: 860px) {.lowerHeader>div, .lowerHeader>div>div {width: 660px !important;}}
-@media (max-width: 760px) {
-    .lowerHeader>div, .lowerHeader>div>div {width: 560px !important;height: 200px !important;}
-}
-@media (max-width: 660px) {
-    .lowerHeader {padding: 15px 0}
-    .lowerHeader>div, .lowerHeader>div>div {width: 100% !important;height: 220px !important;}
-}
-@media (max-width: 560px) {
-    .lowerHeader {padding: 15px 0}
-    .lowerHeader>div, .lowerHeader>div>div {width: 100% !important;height: 125px !important;}
-}
+@media (max-width: 760px) {.lowerHeader>div, .lowerHeader>div>div {width: 560px !important;height: 200px !important;}}
+@media (max-width: 660px) {.lowerHeader {padding: 15px 0}.lowerHeader>div, .lowerHeader>div>div {width: 100% !important;height: 220px !important;}}
+@media (max-width: 560px) {.lowerHeader {padding: 15px 0}.lowerHeader>div, .lowerHeader>div>div {width: 100% !important;height: 125px !important;}}
 
 .footer {
     margin-top: 20px;
@@ -156,7 +146,16 @@
 .botLogo {
     width: 250px;
 }
-@media (max-width: 600px) {.botLogo{opacity: .3;}}
+@media (max-width: 820px) {
+    .botLogo{
+        width: 200px;
+    }
+}
+@media (max-width: 600px) {
+    .botLogo{
+        opacity: .3;
+    }
+}
 
 
 a {text-decoration: none;}
