--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -108,4 +108,7 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
         font-weight: 600;
         text-transform: uppercase;
     }
+    .brLink {
+        color: #1976d7;
+    }
 }
