--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -1,10 +1,11 @@
 .itemTitle {
     font-family: 'Montserrat';
-    font-size: 30px;
+    font-size: 32px;
     font-weight: 900;
     text-align: center;
     margin-bottom: 15px;
     overflow-wrap: break-word;
+    color: black;
 }
 
 .itemImgBlock {
