--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,8 @@
                 margin: 4px auto;
                 li {
                     white-space: nowrap;
-                    margin: 0 15px;
+                    margin: 0 10px;
+                    position: relative;
                     a {
                         color: #000;
                         font-size: 12px;
@@ -39,8 +40,18 @@
                         &:hover, &.active {
                             text-decoration: none;
                             cursor: pointer;
-                            color: #260852;
+                            /*color: #260852;*/
+                            color: #3f51b5;
                             transition: color ease-in-out .2s;
+                            &:after {
+                                content: '';
+                                position: absolute;
+                                left: 0;
+                                right: 0;
+                                bottom: -14px;
+                                height: 2px;
+                                background: #3f51b5;
+                            }
                         }
                     }
                 }
@@ -55,9 +66,7 @@
                 ul {display: none}
                 .navHeaderMiniMenu {display: flex}
             }
-            .navHeaderMiniMenu2{
-                a{color: black;}
-            }
+            .navHeaderMiniMenu2{a{color: #3f51b5;}}
         }
         .navHeader-title{
             flex: 1 1 auto;
@@ -86,7 +95,7 @@
     text-transform: uppercase;
     border-bottom: 1px solid #dedede !important;
     &:hover {
-        color: #260852 !important;
+        color: #3f51b5 !important;
         background: #cecece4f;
     }
 }
@@ -154,20 +163,9 @@
     }
 }
 
-.botLogo {
-    width: 250px;
-}
-@media (max-width: 820px) {
-    .botLogo{
-        width: 200px;
-    }
-}
-@media (max-width: 600px) {
-    .botLogo{
-        opacity: .3;
-    }
-}
-
+.botLogo {width: 250px;}
+@media (max-width: 820px) {.botLogo{width: 200px;}}
+@media (max-width: 600px) {.botLogo{opacity: .3;}}
 
 a {text-decoration: none;}
 
@@ -175,9 +173,7 @@ a {text-decoration: none;}
     vertical-align: text-top;
     padding-right: 5px;
 }
-.paddingTB {
-    padding: 15px 0;
-}
+
 .blockTitle {
     text-align: center;
     font-weight: 600;
