catalog with thunk func + display total

--- a/src/App.scss
+++ b/src/App.scss
@@ -162,6 +162,9 @@
         font-weight: 600;
     }
 }
+.catalogTopFilterBlock {
+    padding-left: 30px;
+}
 
 .botLogo {width: 250px;}
 @media (max-width: 820px) {.botLogo{width: 200px;}}
