--- a/src/App.scss
+++ b/src/App.scss
@@ -198,4 +198,5 @@ a {text-decoration: none;}
     right: 11px !important;
     bottom: 65px !important;
     border: 1px solid #1976d2 !important;
+    color: #1976d2;
 }
